--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
             <div class="header-content-inner">
                 <h1>Matt Parman</h1>
                
-                <p id="fullstack">Full Stack Web Developer</p>
+                <p id="fullstack">Web Developer</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">What I can do for you</a>
             </div>
         </div>
@@ -68,9 +68,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Who is Matt Parman?</h2>
+                    <h2 class="section-heading">My Mission</h2>
+                    <p class="text-faded">Create interactive, user-friendly applications to enhance client and customer experience. This will keep the customers and clients coming back time and time again, lowering marketing costs and increasing revenues. </p>
                     <hr id="light">
-                    <p class="text-faded">Ex golf instructor and financial services salesperson, turned web developer. After coming to terms with my passion for creating and coding, I attended the Rutgers Coding Bootcamp where I developed expertise in Javascript, HTML5, CSS3, FTP, JQuery, Node.js, Database Theory, Active Record, Command Line, Git, Collaborative Dev, among others.</p>
+                    <h2 class="section-heading">Who is Matt Parman</h2>
+                    <p class="text-faded">Former golf instructor and salesperson, turned web developer. After coming to terms with my passion for creating and coding, I attended the Rutgers Coding Bootcamp where I developed expertise in Javascript, HTML5, CSS3, JQuery, Node.js, Command Line, Git, among others.</p>
                     </div>
             </div>
         </div>
@@ -80,7 +82,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
+                    <h2 class="section-heading">I bring...</h2>
                     <hr id="long">
                 </div>
             </div>
@@ -185,7 +187,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     
-                    <p>Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>Give me a call or send me an email and I will get back to you as soon as possible!</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x wow bounceIn"></i>
