fixed some content

--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
           <h2 class="section-heading">Who is Matt Parman</h2>
           <p class="text-faded">Former golf instructor and salesperson, turned web developer. After discovering my passion for creating and coding, I attended the Rutgers Coding Bootcamp where I developed expertise in Javascript, HTML5, CSS3, JQuery, Node.js, Command Line, Git, among others.</p>
           <h2 class="section-heading">My Mission</h2>
-          <p class="text-faded">With the world now working, shopping, connecting, and doing pretty much everything online, it's important to stay with the times. I specialize in creating interactive, user-friendly applications to enhance client and customer experience. This will keep the customers and clients coming back time and time again, lowering marketing costs and increasing revenues. </p>
+          <p class="text-faded">The web is, without a doubt, the most efficient way to get information to a huge audience. It's the best way to find out what really matters to people, which is vital to businesses, non-profits, individuals, the world. I specialize in creating interactive, user-friendly applications to enhance customer experience. When customers are happy, they come back! </p>
           <hr id="light">        
         </div>
       </div>
