--- a/portfolio.html
+++ b/portfolio.html
@@ -89,10 +89,10 @@
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
-                  Category
+                
                 </div>
                 <div class="project-name">
-                  Project Name
+                  Travel Site
                 </div>
               </div>
             </div>
@@ -104,10 +104,10 @@
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
-                  Category
+                  
                 </div>
                 <div class="project-name">
-                  Project Name
+                  The Federal Reserve Project
                 </div>
               </div>
             </div>
@@ -119,10 +119,10 @@
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
-                  Category
+                  In Progress
                 </div>
                 <div class="project-name">
-                  Project Name
+                  Trading System Project
                 </div>
               </div>
             </div>
