--- a/portfolio.html
+++ b/portfolio.html
@@ -114,12 +114,12 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6 col-md-4">
-          <a href="https://github.com/mparman6/TradingSystem" class="portfolio-box">
-            <img src="images/trading.jpeg" class="img-responsive" alt="">
+          <a href="https://immense-forest-3648.herokuapp.com/" class="portfolio-box">
+            <img src="images/deals.png" class="img-responsive" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
-                  In Progress
+                  Coded JavaScript and API's
                 </div>
                 <div class="project-name">
                   Trading System Project
