--- a/portfolio.html
+++ b/portfolio.html
@@ -122,7 +122,7 @@
                   Coded JavaScript and API's
                 </div>
                 <div class="project-name">
-                  Trading System Project
+                  Local Deal Finder
                 </div>
               </div>
             </div>
