--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
     </div>
   </nav>
 
-  <header>
+  <header id="background">
     <div class="header-content">
       <div class="header-content-inner">
         <h1>Matt Parman</h1>
@@ -184,37 +184,29 @@
   </section>
 
   <section id="contact">
- <button type="button" class="btn btn-danger btn-block" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo" id="contact-btn"><h1>Get in Touch!</h1></button>
-
-
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="exampleModalLabel">Still working on connecting the form... Ready in the next few days!</h4>
-      </div>
-      <div class="modal-body">
-        <form>
-          <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-  </div>
-          <div class="form-group">
-            <label for="message-text" class="control-label">Message:</label>
-            <textarea class="form-control" id="message-text"></textarea>
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-      <span id="span">Cell: (201) 618 -3794</span>
-      <span>Email: mparman6@yahoo.com</span>
-        <button type="button" class="btn btn-primary">Send it!</button>
-      </div>
+ <div id="form-content" class="modal fade in" style="display: none;">
+    <div class="modal-header">
+        <a class="close" data-dismiss="modal">×</a>
+        <h3>Send me a message</h3>
     </div>
-  </div>
+    <div class="modal-body">
+        <form class="contact" name="contact">
+            <label class="label" for="name">Your Name</label><br>
+            <input type="text" name="name" class="input-xlarge"><br>
+            <label class="label" for="email">Your E-mail</label><br>
+            <input type="email" name="email" class="input-xlarge"><br>
+            <label class="label" for="message">Enter a Message</label><br>
+            <textarea name="message" class="input-xlarge"></textarea>
+        </form>
+    </div>
+    <div class="modal-footer">
+        <input class="btn btn-success" type="submit" value="Send!" id="submit">
+        <a href="#" class="btn" data-dismiss="modal">Nah.</a>
+    </div>
 </div>
+<div id="thanks"><p><a data-toggle="modal" href="#form-content" class="btn btn-primary btn-large">Modal powers, activate!</a></p></div>
   </section>
+
 
 
 
