changed background color and worked on modal

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
     </div>
   </nav>
 
-  <header>
+  <header id="background">
     <div class="header-content">
       <div class="header-content-inner">
         <h1>Matt Parman</h1>
@@ -195,7 +195,7 @@
         <h4 class="modal-title" id="exampleModalLabel">Still working on connecting the form... Ready in the next few days!</h4>
       </div>
       <div class="modal-body">
-        <form>
+        <form class="contact">
           <div class="form-group">
     <label for="exampleInputEmail1">Email address</label>
     <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
@@ -209,7 +209,7 @@
       <div class="modal-footer">
       <span id="span">Cell: (201) 618 -3794</span>
       <span>Email: mparman6@yahoo.com</span>
-        <button type="button" class="btn btn-primary">Send it!</button>
+        <button id="submit" type="button" class="btn btn-primary">Send it!</button>
       </div>
     </div>
   </div>
